# Personalized-Promo-Recommender

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: daily_discount_pipeline.py  feedback_export_pipeline.py
configs/: feedback_export.yaml  margin_seed.csv  online_store.yaml  optimizer.yaml  ranking.yaml  simulation.yaml
db/: __init__.py  airflow_connection.py  bootstrap_airflow.py  migrate.py
db/migrations/: 001_application_events.sql  002_feedback_export_state.sql  003_recommendation_fallback.sql  004_pipeline_runs.sql
docker/airflow/: Dockerfile
docker/api/: Dockerfile
docker/hadoop/: core-site.xml  hdfs-site.xml  start-namenode.sh
docker/training/: Dockerfile
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: bootstrap_hdfs.sh  hdfs_maintenance.sh  hdfs_preflight.sh  smoke_test_hdfs.sh
services/: __init__.py  contracts.py  online_config.py
services/api/: __init__.py  app.py  repository.py
services/feedback/: __init__.py  export_feedback.py
services/monitoring/: __init__.py  exporter.py
services/pipeline/: __init__.py  state.py
services/publisher/: __init__.py  publish_redis.py
spark_jobs/: __init__.py  bronze_common.py  build_feedback_features.py  build_item_features.py  build_silver_dimensions.py  build_simulation.py  build_user_features.py  build_user_item_features.py  clean_silver_purchases.py  data_contracts.py  enum_compat.py  generate_candidates.py  gold_common.py  ingest_bronze.py  ingest_purchases.py  optimize_discounts.py  optimizer_config.py  rank_recommendations.py  ranking_config.py  silver_common.py  simulation_config.py  time_compat.py  validate_raw_data.py
tests/data_quality/: test_airflow_dag_contract.py  test_bronze_ingestion_contract.py  test_daily_pipeline_contract.py  test_event_contract.py  test_feedback_export_contract.py  test_feedback_features_contract.py  test_gold_feature_contract.py  test_model_scoring_contract.py  (+14 more)
training/: __init__.py  build_propensity_dataset.py  build_uplift_dataset.py  evaluate_offline.py  score_models.py  train_propensity.py  train_uplift.py
(+25 files in other folders)
