[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "personalized-promo-recommender"
version = "0.1.0"
description = "Batch-first personalized promotion recommender"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "hdfs==2.7.3",
    "prometheus-client==0.21.1",
    "psycopg[binary]==3.2.9",
    "psycopg-pool==3.2.6",
    "pydantic==2.11.7",
    "pyarrow==18.1.0",
    "PyYAML==6.0.2",
    "redis==5.2.1",
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
]
training = [
    "catboost==1.2.8",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pyarrow==18.1.0",
    "pydantic==2.11.7",
    "PyYAML==6.0.2",
    "redis==5.2.1",
    "scikit-learn==1.5.2",
]

serving = [
    "fastapi==0.115.12",
    "prometheus-client==0.21.1",
    "psycopg[binary]==3.2.9",
    "psycopg-pool==3.2.6",
    "redis==5.2.1",
    "uvicorn==0.34.2",
]

[project.scripts]
validate-data = "spark_jobs.validate_raw_data:main"

[tool.setuptools.packages.find]
include = ["services*", "spark_jobs*", "training*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests", "services/api/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
